 
  * Fixed fused games not working.
  * Fixed ParticleSystem:setSize ignoring the variation argument.
  * Fixed some file-opening exceptions not being caught.
  * Fixed files loaded by libmodplug being too loud.
  * Fixed paths with periods in them not working.
  * Fixed love.graphics.getBlendMode not detecting subtractive and multiplicative blend modes.

  * Updated PhysicsFS version to 2.0.2 on Windows
  * Updated OpenAL Soft version to 1.13 on Windows
  * Updated libmodplug version to 0.8.8.1 on Windows
  * Updated FreeType version to 2.4.4 on Windows
  * Updated libmpg123 version to 1.13.2 on Windows
  * Windows binary no longer depends on VC2005 runtime.
  * Windows binary no longer depends on SSE2 support.

LOVE 0.7.1 [Game Slave]
-----------------------

  * Added source:isPaused()
  * Added error when initial window can't be created.
  * Added framebuffer filter modes.
  * Added love.filesystem.getLastModified.
  * Added filter modes for ImageFonts.
  * Added dead key support by using "unknown" key with correct unicode value.
  * Added 0 width and height in love.conf. (for current desktop resolution)
  * Added alpha support when encoding TGA images.

  * Fixed a lot of bugs regarding zero characters in threads.
  * Fixed handling of a directory named "love" in current directory.
  * Fixed a few unhandled errors in setScissor.
  * Fixed a bug where old physics callbacks were never dereferenced.
  * Fixed loss of mouse visibility settings on setMode.
  * Fixed creation of a framebuffer unbinding current framebuffer.
  * Fixed several race conditions in love.thread.
  * Fixed 'love .', so it won't use lovedir/. as save dir.
  * Fixed setLineHeight.
  * Fixed extended ascii and ImageFonts.
  * Fixed printf's line wrapping.
  * Fixed crash when playing sounds.
  * Fixed playback of mp3s with arbitrary sample rates.
  * Fixed handling of negative indices in love.joystick.
  * Fixed toggleFullscreen.